# security-header-parsing

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  REPRODUCTION.md  TODOS.md  docker-compose.yml  entrypoint.sh  nbdime_config.json  server.py
_hp/: README.md  config.json  host-config.txt  pyproject.toml  requirements.txt  setup.bash  wpt-config.json
_hp/asis/: cors1.asis  download1.asis  hsts1.asis  hsts2.asis  hsts3.asis  hsts4.asis  hsts5.asis
_hp/common/: empty.html.headers  frame-coep.html  frame-corp.html  frame-fullscreen-pp.html  frame-img-csp.html  frame-oac.html  frame-referrer.html  frame-script-csp.html  frame-script-csp.js  frame-script-csp.js.headers  hsts-report.html  iframe-api.html  iframes.html  script-xcto.js  swag-cross-site.jpg.headers  swag-same-origin.jpg.headers  swag-same-site.jpg.headers  swag.jpg.headers
_hp/hp/: test_external_api.py  test_internals.py
_hp/resources/: permissions-policy.js  store_results.sub.js  store_results.sub.js.headers  testharness.js  testharness.sub.js
_hp/ressources/: testharnessreport.js
_hp/server/: db_funcs.py  get_resp_ids.py  notify_runner_clients.py  responses.py  store_results.py
_hp/tests/: accessapi.sub.html  base.html  fetch-cors.sub.html  fetch-cors.sub.html.headers  frame.old  framing.html  framing.sub.html  fullscreen-api-pp.sub.html  fullscreen-api-pp.sub.html.headers  originAgentCluster-oac-nopop.sub.html  originAgentCluster-oac.sub.html  originAgentCluster-oac.sub.html.headers  perfAPI-tao.sub.html  (+14 more)
(+125 files in other folders)
