[tool.poetry]
name = "hp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
SQLAlchemy = "2.0.21"
psycopg2-binary = "2.9.7"
requests = "2.31.0"
selenium = "^4.15.2"
playwright = "1.39.0"
httpx = "^0.25.1"
jupyterlab = "^4.0.8"
pandas = "^2.1.3"
nbdime = "^3.2.1"
h2o = "^3.44.0.2"
anytree = "^2.12.1"
ipywidgets = "^8.1.1"
chefboost = "^0.0.17"
ecs-logging = "^2.1.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
matplotlib = "^3.8.4"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
